--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "homepage": "https://github.com/AbdulMoiz961/Issue_Tracker",
   "dependencies": {
+    "apollo-server-express": "^2.26.2",
     "express": "^4.16.4",
+    "graphql": "^0.13.2",
     "nodemon": "^1.18.9"
   },
   "devDependencies": {
