--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server-express": "^2.26.2",
     "express": "^4.16.4",
     "graphql": "^0.13.2",
+    "mongodb": "^3.7.4",
     "nodemon": "^1.18.9"
   },
   "devDependencies": {
