--- a/ui/package.json
+++ b/ui/package.json
@@ -4,10 +4,17 @@
     "description": "Issue Tracker Application (Pro MERN Stack) UI",
     "main": "index.js",
     "scripts": {
+        "#start": "UI server. HMR is enabled in dev mode.",
         "start": "nodemon -w uiserver.js -w .env uiserver.js",
+
+        "#lint": "Runs ESLint on all relevant files",
         "lint": "eslint . --ext js,jsx --ignore-pattern public",
-        "compile": "babel src --out-dir public",
-        "watch": "babel src --out-dir public --watch --verbose"
+
+        "#compile": "Generates JS bundles for production. Use with start.",
+        "compile": "webpack --mode production",
+
+        "#watch": "Compile, and recompile on any changes.",
+        "watch": "webpack --watch"
     },
     "repository": {
         "type": "git",
@@ -17,20 +24,30 @@
     "license": "ISC",
     "homepage": "https://github.com/AbdulMoiz961/Issue_Tracker",
     "dependencies": {
+        "babel-polyfill": "^6.26.0",
         "dotenv": "^6.2.0",
         "express": "^4.16.4",
         "http-proxy-middleware": "^0.21.0",
-        "nodemon": "^1.18.9"
+        "nodemon": "^1.18.9",
+        "prop-types": "^15.6.2",
+        "react": "^16.7.0",
+        "react-dom": "^16.7.0",
+        "whatwg-fetch": "^3.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.2.3",
         "@babel/core": "^7.2.2",
         "@babel/preset-env": "^7.2.3",
         "@babel/preset-react": "^7.0.0",
-        "eslint": "^5.16.0",
-        "eslint-config-airbnb": "^17.1.1",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-jsx-a11y": "^6.9.0",
-        "eslint-plugin-react": "^7.35.0"
-    }
+        "babel-loader": "^8.0.5",
+        "eslint": "^5.12.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-plugin-import": "^2.14.0",
+        "eslint-plugin-jsx-a11y": "^6.1.2",
+        "eslint-plugin-react": "^7.12.3",
+        "webpack": "^4.28.3",
+        "webpack-cli": "^3.2.1",
+        "webpack-dev-middleware": "^3.5.0",
+        "webpack-hot-middleware": "^2.24.3"
+  }
 }
