--- a/ui/src/.eslintrc
+++ b/ui/src/.eslintrc
@@ -1,9 +1,10 @@
 {
     "extends": "airbnb",
     "env": {
-        "browser": true
+      "browser": true
     },
     "rules": {
-        "react/prop-types": "off"
+      "import/extensions": [ "error", "always", { "ignorePackages": true } ],
+      "react/prop-types": "off"
     }
 }
